--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve": "vue-cli-service serve"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-awesome-sidebar": "^1.2.4",
